<resources>
    <string name="app_name" translatable="false">Workability</string>


    <string name="Sign_In">Sign In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="updateProfile">update profile</string>
    <string name="contact">Contact here</string>
    <string name="Email">E-mail</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="Phone">Phone</string>
    <string name="Skill">Skills</string>
    <string name="Password">Password</string>
    <string name="Disability">Disability Status:</string>
    <string name="Create_Acc">Create Account</string>
    <string name="change_language">Change_Language</string>
    <string name="Choose_Role">Choose Role</string>
    <string name="Job_Seeker">Job Seekers</string>
    <string name="Company">Company</string>
    <string name="Address">Address</string>
    <string name="Jobs">Jobs</string>
    <string name="Contact">Contact</string>
    <string name="CompanyName">Company Name</string>
    <string name="RegistrationNumber">Registration Number</string>
    <string name="Location">Location</string>
    <string name="URL">Website URL</string>
    <string name="Disc">Description</string>
    <string name="Hello">Hello</string>
    <string name="Notification">Notification</string>
    <string name="Save">Save</string>
    <string name="Profile">Profile</string>
    <string name="Details">Details</string>
    <string name="Cpdf">Click here to view the PDF</string>
    <string name="AddJob">Add Job</string>
    <string name="User_Information">User Information</string>
    <string name="JobTitle">Job Title</string>
    <string name="JobDesc">Job Description</string>
    <string name="Salary">Salary</string>
    <string name="FindJob">Find Job</string>
    <string name="logout">Log Out</string>
    <string name="field_apply">Apply</string>
    <string name="Upload_CV">Drag your CV</string>
    <string name="login_heading">Welcome Back</string>
    <string name="login_sub_heading">Let’s Login. Fill in your details to apply for jobs!</string>
    <string name="signup_sub_heading">Let’s Signup. Fill in your details to apply for jobs!</string>
    <string name="EnterProfile">Let’s begin edit your profile</string>
    <string name="lan">ع</string>
    <string-array name="Disability_Array">
        <item>Motor Impairment</item>
        <item>Visual Impairment</item>
        <item>Hearing Impairment</item>
        <item>Mental Impairment</item>
        <item>Dwarfism Impairment</item>
    </string-array>
    <string-array name="Company_Array">
        <item>Technology</item>
        <item>Healthcare</item>
        <item>Finance</item>
        <item>Education</item>
        <item>Manufacturing</item>
        <item>Retail</item>
        <item>Hospitality</item>
        <item>Construction</item>
        <item>Transportation</item>
        <item>Entertainment</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>