<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@color/MainColor">
            <TextView
                android:id="@+id/SignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sign_Up"
                android:textSize="48sp"
                android:textColor="#0f003e"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <!-- Email Input -->
            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:textColor="@color/MainColor"
                android:textColorHint="@color/white"

                tools:text="@string/Email"
                android:layout_marginTop="10dp"
                android:padding="12dp"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintTop_toBottomOf="@id/Name"/>
            <!-- Name Input -->
            <EditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name"
                android:textColor="@color/MainColor"
                android:textColorHint="@color/white"
                tools:text="Name"
                android:layout_marginTop="10dp"
                android:padding="12dp"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintTop_toBottomOf="@id/SignIn"/>

            <!-- Password Input -->
            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                tools:text="Password"
                android:textColor="@color/MainColor"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/Email"
                android:layout_marginTop="10dp"
                android:padding="12dp"
                android:background="@drawable/rounded_edittext"/>

            <!-- Sign In Button -->
            <Button
                android:id="@+id/SignUnButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#0f003e"
                android:text="@string/Sign_Up"
                app:layout_constraintTop_toBottomOf="@id/Password"
                android:layout_marginTop="20dp"/>

            <!-- Sign Up Button -->

</androidx.constraintlayout.widget.ConstraintLayout>
