<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.myapplication.data.model.JobData" /> <!-- Adjust the package name accordingly -->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".user_details.fragments.StudentDetailFragment">

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddJob"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile">

            <!-- Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Jobtitlelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/JobTitle"
                android:textColorHint="@color/text_color"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/box_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Jobtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="12dp"
                    android:text="@={user.jobtitle}"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Phone Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Jobdesclayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/JobDesc"
                android:textColorHint="@color/text_color"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/box_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Jobdesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="12dp"
                    android:text="@={user.jobdesc}"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Salarylayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Salary"
                android:textColorHint="@color/text_color"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/box_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="12dp"
                    android:text="@={user.salary}"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Address Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Locationlayoutr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Location"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/box_stroke_color"
                app:hintTextColor="@color/text_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:padding="12dp"
                    android:text="@{user.location}" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Disability Type Input -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:layout_marginTop="10dp"
                android:text="@string/Save"
                android:textColor="@color/button_text_color" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
