<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.myapplication.data.model.CompanyData" /> <!-- Adjust the package name accordingly -->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".user_details.fragments.StudentDetailFragment">

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Profile"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_image_picker" />

            <!-- Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CompanyNamelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/CompanyName"
                android:textColorHint="@color/text_color"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/box_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="12dp"
                    android:text="@={user.companyName}"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Age Input -->


            <!-- Phone Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Phonelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Phone"
                android:textColorHint="@color/text_color"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/box_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:padding="12dp"
                    android:text="@={user.phone}"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Emaillayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Email"
                android:textColorHint="@color/text_color"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/box_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:text="@={user.email}"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Address Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Locationlayoutr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Location"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/box_stroke_color"
                app:hintTextColor="@color/text_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:padding="12dp"
                    android:text="@{user.location}" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Skills Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/URLlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/URL"
                android:textColorHint="@color/text_color"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/box_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/URL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="12dp"
                    android:text="@={user.websiteUrl}"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Dislayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Disc"
                android:textColorHint="@color/text_color"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/box_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Disc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="12dp"
                    android:text="@={user.description}"
                    android:textColor="@color/text_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Disability Type Input -->

            <Spinner
                android:layout_marginTop="10dp"
                android:id="@+id/IndustryTypespinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:layout_marginTop="10dp"
                android:text="@string/Save"
                android:textColor="@color/button_text_color" />



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
